Fix scrollbar styles

--- a/user/src/Components/Scrollbar/Scrollbar.css
+++ b/user/src/Components/Scrollbar/Scrollbar.css
@@ -1,14 +1,29 @@
 ::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
+  width: 0.32vw;
+  height: 0.32vw;
 }
 
 ::-webkit-scrollbar-track {
   background: #1D1E21;
-  border-radius: 3px;
+  border-radius: 0.16vw;
 }
 
 ::-webkit-scrollbar-thumb {
   background: #908EF3;
-  border-radius: 3px;
+  border-radius: 0.16vw;
+}
+
+@media (max-aspect-ratio: 1/1){
+  ::-webkit-scrollbar {
+    width: 0.5vh;
+    height: 0.5vh;
+  }
+  
+  ::-webkit-scrollbar-track {
+    border-radius: 0.25vh;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    border-radius: 0.25vh;
+  }
 }
